<resources>
    <string name="app_name">TylerMAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="scissors">Scissors</string>
    <string name="paper">Paper</string>
    <string name="rock">Rock</string>
    <string name="select_choice">Select Your Choice</string>
    <string name="message_label">Winner Result (Green is user, Red is computer)</string>
    <string name="undefined">Undefined</string>
</resources>